WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250147
Fix internal build after warning from
258484@main
https://bugs.webkit.org/show_bug.cgi?id=250147
Summary
Fix internal build after warning from 258484@main
Alex Christensen
Reported
2023-01-05 13:41:01 PST
Calling pairIntHash with uint64_t parameters not only ignores 32 bits of the uint64_t, but it caused a compiler warning in an internal file that includes Int128.h
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2023-01-05 13:41:09 PST
<
rdar://problem/103925489
>
Alex Christensen
Comment 2
2023-01-05 13:42:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8246
EWS
Comment 3
2023-01-05 13:46:01 PST
Committed
258507@main
(ab6088bdd4ab): <
https://commits.webkit.org/258507@main
> Reviewed commits have been landed. Closing PR #8246 and removing active labels.
Alexey Proskuryakov
Comment 4
2023-01-05 17:51:52 PST
***
Bug 250143
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug