Fix internal build after warning from 258484@main https://bugs.webkit.org/show_bug.cgi?id=250147 rdar://103925489

Unreviewed.

Calling pairIntHash with uint64_t parameters not only ignores 32 bits of the uint64_t, but it caused a compiler warning in an internal file that includes Int128.h

* Source/WTF/wtf/Int128.h:
(WTF::DefaultHash<UInt128>::hash):
(WTF::DefaultHash<Int128>::hash):

Canonical link: https://commits.webkit.org/258507@main